force-app/main/default/objects/Module__c/fields/Estimated_hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_hours__c</fullName>
    <label>Estimated hours</label>
    <summarizedField>Task_PM__c.Business_hours__c</summarizedField>
    <summaryForeignKey>Task_PM__c.Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>