force-app/main/default/objects/Module__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Modules</relationshipLabel>
    <relationshipName>Modules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>