force-app/main/default/objects/Module__c/fields/Total_Used_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Used_Hours__c</fullName>
    <label>Total Used Hours</label>
    <summarizedField>Task_PM__c.Total_Used_Hours__c</summarizedField>
    <summaryForeignKey>Task_PM__c.Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>