force-app/main/default/objects/Module__c/listViews/Our_Modules.listView-meta.xml
<ListView>
    <fullName>Our_Modules</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Our Modules</label>
</ListView>